--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "blog para consolidar os estudos",
-  "main": "index.js",
+  "main": "index/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
